web/css/menu.css
/* ... */
@media (max-width: 440px) {
    .subMenu .category-header {
        float: left;
    }
    .logo-mobile-container {
        width: 213px;
    }
    .menu-offer {
        font-size: 10px;
    }
}

@media (max-width: 350px) {
    .menuItemName {
        width: 300px;
    }
}


/*CR1*/

span.per-serving-text {
    clear: both;
    color: #090606;
    float: left;
    position: absolute;
}

span.per-serving-box {
    font-family: 'BrandonGrotesque-Regular';
    color: #6B6B6B;
    font-size: 11px;
    float: left;
    clear: both;
    margin: 16px 0px;
    width: auto;
    white-space: nowrap;
}

div.serveBox {
    position: relative;
    float: left;
    margin: 0px 2px;
}

@media (max-width: 1024px) and (min-width: 768px) {
    div.serveBox {
        margin-left: 91px !important;
    }
}

